# pydantic_series_linkedin

./: README.md  pyproject.toml
01_basics/: 01_main.py  02_main_list.py
02_more_strict/: 01_strict.py  02_wrong_email.py  03_wrong_id.py  04_correct_id_str.py
03_annotations/: 01_annotations_deepdiff.py
04_some_regex/: 01_regex.py  02_pattern_instead.py
05_double_typed_data/: 01_double_typed.py
06_dict_root/: 01_dict_root.py  02_dict_root_models.py
07_own_validator/: 01_own_validator.py  02_same_with_union.py
08_before_validator/: 01_before.py
