[project]
name = "pydantic-series"
version = "0.1.0"
description = "Code I used on my Pydantic series on LinkedIn"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepdiff>=8.5.0",
    "netaddr>=1.3.0",
    "pydantic[email]>=2.11.7",
    "rich>=14.0.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ruff>=0.12.4"]

[tool.ruff]
line-length = 150
